Fixing videos on mobile

--- a/style.css
+++ b/style.css
@@ -941,6 +941,15 @@ footer {
   border: 0;
   z-index: 1;
 }
+.video-wrapper video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  z-index: 1;
+}
 .video-modal__close {
   position: absolute;
   right: -0.5rem;
